<resources>
    <string name="app_name">SmartHome</string>
    <string name="label_user_name">USERNAME</string>
    <string name="label_password">PASSWORD</string>
    <string name="hint_user_name">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="label_server_address">SERVER</string>
    <string name="hint_server_address">Enter server IP address</string>
    <string name="label_home">Home</string>
    <string name="label_notification">Notification</string>
    <string name="label_energy">Energy</string>
    <string name="label_setting">Setting</string>
    <string name="label_account_info">Account Information</string>
    <string name="label_change_background">Background</string>
    <string name="label_change_password">Password</string>
    <string name="label_logout">Log Out</string>
    <string name="label_scene">Favorite Scenes</string>
    <string name="label_hi">Hi</string>
    <string name="label_login">LOG IN</string>
    <string name="label_remember_account">Remember account</string>
    <string name="message_null_user_name">Please input user name</string>
    <string name="message_null_password">Please input password</string>
    <string name="message_null_server_ip">Please input server ip address</string>
    <string name="message_wrong_server_ip_format">Server ip address wrong format</string>
    <string name="button_yes">YES</string>
    <string name="button_cancel">CANCEL</string>
    <string name="label_show_password">Show password</string>
    <string name="label_choose_language">Select language</string>
    <string name="label_summary_language">Click to change language</string>
    <string name="label_language">Language</string>
    <string name="label_choose_wallpaper">Select wallpaper</string>
    <string name="label_wallpaper">Wallpaper</string>
    <string name="label_summary_wallpaper">Click to change wallpaper</string>
    <string name="label_software_info">Software Information</string>
    <string name="language_english">English</string>
    <string name="language_vietnam">Vietnamese</string>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="background1">background1</string>
    <string name="background2">background2</string>
    <string name="background3">background3</string>
    <string name="background4">background4</string>
    <string name="label_summary_account">Click to show account information</string>
    <string name="label_summary_software">Click to show software information</string>
    <string name="dialog_title_error">Error</string>
    <string name="message_logining">Logining...</string>
    <string name="message_error_no_apartment">This account does not manage any apartment</string>
    <string name="message_error_wrong_account">Wrong username or password. Please try again!</string>
    <string name="message_error_data">Data error</string>
    <string name="message_service_error">Can\'t get apartment data</string>
    <string name="message_error_no_internet">No Internet. Please check Internet connection and try again</string>
    <string name="message_load_data">Loading data...</string>
    <string name="message_connecting_server">Connecting server...</string>
    <string name="message_error_server">Server error</string>
    <string name="message_connected">Connected</string>
    <string name="message_question_logout">Do you want to log out?</string>
    <string name="message_reconnect">Reconnected</string>
    <string name="message_error_convert_data">Convert data error</string>
    <string name="label_device_power_on">ON</string>
    <string name="label_device_power_off">OFF</string>
    <string name="label_close">CLOSE</string>
    <string name="label_open">OPEN</string>
    <string name="label_stop">STOP</string>
    <string name="label_get_data">GET DATA</string>
    <string name="label_total_electric">Total:</string>
    <string name="label_total_water">Total:</string>
    <string name="label_water">WATER</string>
    <string name="label_electric">ELECTRIC</string>
    <string name="label_day">DAY</string>
    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <string name="label_apartment">Apartment</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>
    <string name="label_description">Description</string>
    <string name="label_id">ID</string>
    <string name="label_server_disconnect">Connection to server lost</string>
    <string name="message_server_off">Can\'t connect to server</string>
</resources>
