<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_main_home"
        android:enabled="true"
        android:icon="@drawable/home_pressed_30px"
        android:title="@string/label_home" />
    <item
        android:id="@+id/item_main_notify"
        android:enabled="true"
        android:icon="@drawable/notify_pressed_30px"
        android:title="@string/label_notification" />
    <item
        android:id="@+id/item_main_energy"
        android:enabled="true"
        android:icon="@drawable/graph_pressed_30px"
        android:title="@string/label_energy" />
    <item
        android:id="@+id/item_main_setting"
        android:enabled="true"
        android:icon="@drawable/setting_pressed_30px"
        android:title="@string/label_setting" />
</menu>